amélioration setUp des tests - instance objet au début